Changed background image. Fixed spacing in table for PCB and CPU display (#13, #14)

--- a/tsos.css
+++ b/tsos.css
@@ -1,7 +1,7 @@
 /* TSOS.css */
 
 body {
-  background: #909193 url(distrib/images/steinway.jpg);
+  background: #909193 url(distrib/images/piano.jpg);
   background-size: cover;
   font-family: Helvetica, Verdana, Arial, sans-serif;
   font-size: 12pt;
@@ -33,7 +33,7 @@ h3 {
 
 #display {
   background-color:#DFDBC3;
-  border: 2px solid red;
+  border: 2px solid black;
   cursor: default;
 }
 
@@ -57,4 +57,8 @@ th, td {
   font-family: Courier New, Courier, monospace;
   border: 1px solid gray;
   padding: 5px;
+}
+
+#tableCPU thead td {
+  width: 45px;
 }
